# matplotlib-cpp

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
src/: CMakeLists.txt  animation.cpp  axlines.cpp  contour.cpp  eigen.cpp  errorbar.cpp  imshow.cpp  legend.cpp  loglog.cpp  minimal.cpp  modern.cpp  nonblock.cpp  scatter.cpp  semilogx.cpp  semilogy.cpp  small.cpp  spy.cpp  subplot.cpp  surface.cpp  update.cpp
